@@ -41,6 +41,7 @@ Changes in @NEW@:
       (CNY-1625)
     * Many build commands invoked shell commands without proper quoting
       (thanks to Pavel Volkovitskiy for finding and fixing this) (CNY-1627)
+    * Mirroring using group recursion has been fixed (CNY-1629)
 
   o Client Changes:
     * The conaryclient module now exposes ChangeSetFromFile to instantiate
